Added arrow to buttons, added gekleurd blok zonder button

--- a/Smellink/email_1.html
+++ b/Smellink/email_1.html
@@ -183,7 +183,7 @@
     }
 
     a {
-      color: #233971 !important
+      color: #233971
     }
 
     .cta-button a, .webversion-link a, .footer-links, .footer-links a, .footer-links a:-webkit-any-link, .footer-links a:link {
@@ -1062,9 +1062,8 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline> 
-                                              <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                            </a> </td>
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -1111,8 +1110,9 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline> 
-                                                <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> 
+                                                <img src="./images/arrow-light.png" alt="arrow">
                                               </a> 
                                             </td>
                                         </tr>
@@ -1369,9 +1369,8 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline> 
-                                                <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                              </a> </td>
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -1445,8 +1444,8 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline>
-                                                <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow"> </a> </td>
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -1669,9 +1668,8 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline>
-                                                <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                              </a> </td>
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -1760,9 +1758,8 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline lp-label="Button">Lees verder</lp-singleline>
-                                                <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                              </a> </td>
+                                              target="_blank"> <lp-singleline lp-label="Button">Lees
+                                                verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -2126,108 +2123,6 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
-      <lp-layout lp-label="Gekleurd blok gecentreerd - Blauw">
-        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-        <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
-          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-            style="background:#fff;background-color:#fff;width:100%">
-            <tbody>
-              <tr>
-                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
-                  <div class="mj-column-per-100 mj-outlook-group-fix"
-                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
-                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                      <tbody>
-                        <tr>
-                          <td style="background-color:#233971;padding:24px;vertical-align:middle">
-                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                              <tbody>
-                                <tr>
-                                  <td align="center" style="font-size:0;padding:0 0 24px;word-break:break-word">
-                                    <div
-                                      style="color:#f8f9fa;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:center;text-decoration:none;text-transform:uppercase">
-                                      <h3
-                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Gekleurd tekstblok</lp-singleline> </h3>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td align="center" style="font-size:0;word-break:break-word">
-                                    <div
-                                      style="color:#f8f9fa;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
-                                      <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                                        esse cillum dolore eu fugiat nulla pariatur.</lp-multiline> </div>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout>
-      <lp-layout lp-label="Gekleurd blok gecentreerd - Grijs">
-        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-        <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
-          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-            style="background:#fff;background-color:#fff;width:100%">
-            <tbody>
-              <tr>
-                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
-                  <div class="mj-column-per-100 mj-outlook-group-fix"
-                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
-                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                      <tbody>
-                        <tr>
-                          <td style="background-color:#dee1ea;padding:24px;vertical-align:middle">
-                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                              <tbody>
-                                <tr>
-                                  <td align="center" style="font-size:0;padding:0 0 24px;word-break:break-word">
-                                    <div
-                                      style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:center;text-decoration:none;text-transform:uppercase">
-                                      <h3
-                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Gekleurd tekstblok</lp-singleline> </h3>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td align="center" style="font-size:0;word-break:break-word">
-                                    <div
-                                      style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
-                                      <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                                        esse cillum dolore eu fugiat nulla pariatur.</lp-multiline> </div>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout>
       <lp-layout lp-label="Gekleurd blok met button - Blauw">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
@@ -2277,9 +2172,7 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#f8f9fa"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#f8f9fa;color:#233971;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline>Lees verder</lp-singleline> 
-                                              <img src="./images/arrow-dark.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                            </a> </td>
+                                              target="_blank"> <lp-singleline>Lees verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -2347,9 +2240,7 @@
                                             style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:8px 16px 8px 16px;background:#233971"
                                             valign="middle"> <a href="https://google.com"
                                               style="background:#233971;color:#fff;display:inline-block;font-family:Barlow,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:8px 16px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:8px"
-                                              target="_blank"> <lp-singleline>Lees verder</lp-singleline>
-                                            <img src="./images/arrow-light.png" height="12" style="height:12px !important;max-height:12px !important; margin-left: 4px;" alt="arrow">
-                                          </a> </td>
+                                              target="_blank"> <lp-singleline>Lees verder</lp-singleline> </a> </td>
                                         </tr>
                                       </tbody>
                                     </table>
