--- a/Smellink/email_1.html
+++ b/Smellink/email_1.html
@@ -183,11 +183,11 @@
     }
 
     a {
-      color: #233971
+      color: #233971;
     }
 
-    .cta-button a, .webversion-link a, .footer-links, .footer-links a, .footer-links a:-webkit-any-link, .footer-links a:link {
-      color: #fff !important
+    .cta-button td a, .webversion-link td a, .footer-links td, .footer-links td a, .footer-links td a:-webkit-any-link, .footer-links td a:link {
+      color: #ffffff !important;
     }
 
     a[x-apple-data-detectors] {
