--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -186,7 +186,7 @@
       color: #233971 !important
     }
 
-    .cta-button td a, .webversion-link td a, .footer-links td, .footer-links td a, .footer-links td a:-webkit-any-link, .footer-links td a:link {
+    .cta-button td a, .webversion-link a, .footer-links, .footer-links a, .footer-links a:-webkit-any-link, .footer-links a:link {
       color: #ffffff !important;
     }
 
