--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -331,8 +331,8 @@
                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                       <tbody>
                                         <tr>
-                                          <td align="right" style="font-size:0;padding:0;word-break:break-word">
-                                            <div class="webversion-link" style="color:#fff;font-family:Barlow,Arial;font-size:12px;font-weight:400;line-height:16px;text-align:right;text-decoration:underline">
+                                          <td class="webversion-link" align="right" style="font-size:0;padding:0;word-break:break-word">
+                                            <div style="color:#fff;font-family:Barlow,Arial;font-size:12px;font-weight:400;line-height:16px;text-align:right;text-decoration:underline">
                                               <lp-singleline lp-label="Webversie"> <lp-webversion> Bekijk de webversie</lp-webversion> </lp-singleline> </div>
                                           </td>
                                         </tr>
@@ -2520,9 +2520,9 @@
                                             width="100%">
                                             <tbody>
                                               <tr>
-                                                <td align="left"
+                                                <td class="footer-links" align="left"
                                                   style="font-size:0;padding:16px 0 0;word-break:break-word">
-                                                  <div class="footer-links" style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
+                                                  <div style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                                     <lp-multiline lp-label="Contactgegevens"> 
                                                       Smellink Group BV<br>
                                                       De Dennen 13<br> 
@@ -2643,9 +2643,9 @@
                                             width="100%">
                                             <tbody>
                                               <tr>
-                                                <td align="left"
+                                                <td class="footer-links" align="left"
                                                   style="font-size:0;padding:16px 0 0;word-break:break-word">
-                                                  <div class="footer-links" style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
+                                                  <div style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                                     <lp-multiline lp-label="Uitschrijven"> 
                                                       <lp-unsubscribe>Afmelden nieuwsbrief</lp-unsubscribe> 
                                                       <br>
