link invert outlook

--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -183,7 +183,11 @@
     }
 
     a {
-      color: #233971 !important
+      color: #ffffff
+    }
+
+    .lp-toc-link a {
+      color: #233971;
     }
 
     .cta-button td a, .webversion-link div a, .footer-links div, .footer-links div a, .footer-links div a:-webkit-any-link, .footer-links div a:link {
