link lp-multiline

--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -190,6 +190,14 @@
       color: #233971;
     }
 
+    .multi-text a {
+      color: #233971;
+    }
+
+    .multi-text-light a {
+      color: #ffffff;
+    }
+
     .cta-button td a, .webversion-link div a, .footer-links div, .footer-links div a, .footer-links div a:-webkit-any-link, .footer-links div a:link {
       color: #ffffff !important;
     }
@@ -657,7 +665,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -724,7 +732,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:24px 0 0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:24px 0 0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -776,7 +784,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left"  class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Content"><img class="inline-image"
@@ -835,7 +843,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left"  class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Content"><img class="inline-image"
@@ -943,7 +951,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left"  class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1044,7 +1052,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1242,7 +1250,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1299,7 +1307,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1351,7 +1359,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1427,7 +1435,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1512,7 +1520,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1584,7 +1592,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1651,7 +1659,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -1742,7 +1750,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -2059,7 +2067,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#f8f9fa;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -2109,7 +2117,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                  <td align="left" class="multi-text" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
@@ -2158,7 +2166,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="font-size:0;word-break:break-word">
+                                  <td align="center" class="multi-text-light" style="font-size:0;word-break:break-word">
                                     <div
                                       style="color:#f8f9fa;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
                                       <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -2209,7 +2217,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="font-size:0;word-break:break-word">
+                                  <td align="center" class="multi-text" style="font-size:0;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
                                       <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -2260,7 +2268,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="font-size:0;padding:0 0 16px;word-break:break-word">
+                                  <td align="center" class="multi-text-light" style="font-size:0;padding:0 0 16px;word-break:break-word">
                                     <div
                                       style="color:#f8f9fa;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
                                       <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -2330,7 +2338,7 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="font-size:0;padding:0 0 16px;word-break:break-word">
+                                  <td align="center" class="multi-text" style="font-size:0;padding:0 0 16px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:center;text-decoration:none">
                                       <lp-multiline lp-label="Titel"> Lorem ipsum dolor sit amet, consectetur adipiscing
