--- a/Boskalis/Nieuwsbrief.html
+++ b/Boskalis/Nieuwsbrief.html
@@ -1866,24 +1866,27 @@
                                           <td style="padding-left: 0px; padding-right: 0px; padding-bottom: 0px;">
                                              <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tbody><tr>
-                                                   <th class="column-top" style="font-size:0pt; line-height:0pt; padding:0; margin:0; font-weight:normal; vertical-align:top;">
+                                                   <th class="column-top" style="font-size:0pt; line-height:0pt; padding:0; margin:0; font-weight:normal; vertical-align:bottom;">
                                                       <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0">
                                                          <tbody>
                                                             <tr>
-                                                               <td style="font-size:0pt; line-height:0pt; text-align:left; padding-bottom:0px; padding-top: 40px; padding-left: 40px; padding-right: 40px;">
-                                                                  <img src="./images/Boskalis-Academy.png" width="210" border="0" alt="Logo Boskalis Academy" lp-edit="" lp-no-imageedit="">
-                                                               </td>
-                                                            </tr>
-                                                            <tr>
-                                                               <td class="tekst-wit mfz-18 mlh-30" style="font-size:16px; line-height:24px; color:#ffffff; font-family:'Futura Cyrillic Book', Arial, sans-serif; text-align:left; padding-top: 20px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px; font-weight: normal;">
+                                                               <td class="tekst-wit mfz-18 mlh-30" style="font-size:16px; line-height:24px; color:#ffffff; font-family:'Futura Cyrillic Book', Arial, sans-serif; text-align:left; padding-top: 40px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px; font-weight: normal;">
                                                                   <lp-multiline>
-                                                                     <a href="https://boskalis.com/">boskalis.com</a><br>
-                                                                     2025 © Boskalis
+                                                                     Learning for anyone, anywhere, anytime!
                                                                   </lp-multiline>
                                                                </td>
                                                             </tr>
                                                          </tbody>
                                                       </table>
+                                                   </th>
+                                                   <th class="column-top" width="170" style="font-size:0pt; line-height:0pt; margin:0; font-weight:normal; vertical-align:bottom; color:#ffffff;">
+                                                      <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                         <tbody><tr>
+                                                            <td style="font-size:0pt; line-height:0pt; text-align:right; padding-bottom:0px;padding-top: 40px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px;">
+                                                               <img src="images/Boskalis-Academy.png" width="170" border="0" alt="Logo Boskalis Academy" lp-edit="" lp-no-imageedit="">
+                                                            </td>
+                                                         </tr>
+                                                      </tbody></table>
                                                    </th>
                                                 </tr>
                                              </tbody></table>
