socials links dictator

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -2896,25 +2896,25 @@
                                                             style="border:none;color:#000;font-family:Ubuntu,Helvetica,Arial,sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:136px">
                                                             <tr>
                                                               <td align="right" width="28"
-                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                style="max-width:28px;width:28px"> <a href="https://www.facebook.com/dictatorproductie/"><img
                                                                     src="images/I2001_1532_4014_2404_30_297.png" lp-edit
                                                                     alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
-                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                style="max-width:28px;width:28px"> <a href="https://www.instagram.com/dictatorproductiebv/"><img
                                                                     src="images/I2001_1532_4014_2437_30_297.png" lp-edit
                                                                     alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
-                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                style="max-width:28px;width:28px"> <a href="https://www.linkedin.com/company/dictator-productie-b.v./"><img
                                                                     src="images/I2001_1532_4014_2477_30_297.png" lp-edit
                                                                     alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
-                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                style="max-width:28px;width:28px"> <a href="https://www.youtube.com/user/Dictator32"><img
                                                                     src="images/I2001_1532_4014_2523_30_297.png" lp-edit
                                                                     alt align="right" width="28"></a> </td>
                                                             </tr>
