--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -552,7 +552,7 @@
                                   </td>
                                 </tr>
                               </tbody>
-                            </table> <!--[if mso | IE]></td></tr><![endif]--> <lp-layout lp-label="Hero Image">
+                            </table> <!--[if mso | IE]></td></tr><![endif]--> 
                               <!--[if mso | IE]><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f5f5fb" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
                               <div style="background:#f5f5fb;background-color:#f5f5fb;margin:0 auto;max-width:700px">
                                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -601,7 +601,7 @@
                                   </tbody>
                                 </table>
                               </div> <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
-                            </lp-layout> <!--[if mso | IE]></table><![endif]-->
+                            <!--[if mso | IE]></table><![endif]-->
                           </td>
                         </tr>
                       </tbody>
