--- a/KED/default.html
+++ b/KED/default.html
@@ -549,7 +549,7 @@
         </tr>
       </tbody>
     </table> <lp-layout lp-label="Hero afbeelding"><img src="./images/I6038_936_79_239_30_297.png" alt border="0"
-        width="100%" style="display:block;margin:0 auto;max-width:100%;width:100%"
+        width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%"
         lp-edit></lp-layout><lp-repeater><lp-layout lp-label="[H1] Titel">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f5f5fb" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#f5f5fb;background-color:#f5f5fb;margin:0 auto;max-width:700px">
