--- a/KED/default.html
+++ b/KED/default.html
@@ -1938,13 +1938,14 @@
                               <tbody>
                                 <tr>
                                   <td align="center" style="font-size:0;padding:16px 0;word-break:break-word">
-                                    <p style="border-top:1px solid #dee2e6;font-size:1px;margin:0 auto;width:100%"></p> <!--[if mso | IE
-                                        ]><table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top: solid 1px #dee2e6; font-size: 1px; margin: 0px auto; width: 652px" role="presentation" width="652px">
-                                          <tr>
-                                            <td style="height: 0; line-height: 0">&nbsp;</td>
-                                          </tr>
-                                        </table><!
-                                      [endif]-->
+                                    <p style="border-top:1px solid #dee2e6;font-size:1px;margin:0 auto;width:100%"></p>
+                                    <!--[if mso | IE ]>
+                                      <table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top: solid 1px #dee2e6; font-size: 1px; margin: 0px auto; width: 652px" role="presentation" width="652px">
+                                        <tr>
+                                          <td style="height: 0; line-height: 0">&nbsp;</td>
+                                        </tr>
+                                      </table>
+                                    <![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
