--- a/KED/default.html
+++ b/KED/default.html
@@ -481,7 +481,7 @@
                               <tr>
                                 <td style="padding:0;vertical-align:top">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                                    <tbody></tbody>
+                                    <tbody><tr><td>&nbsp;</td></tr></tbody>
                                   </table>
                                 </td>
                               </tr>
@@ -504,7 +504,7 @@
                                               <tr>
                                                 <td style="width:100px"> <img alt
                                                     src="./images/I4003_2126_6004_4419_52_69.png"
-                                                    style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
+                                                    style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100px;"
                                                     width="100" height="auto"> </td>
                                               </tr>
                                             </tbody>
@@ -525,7 +525,7 @@
                               <tr>
                                 <td style="padding:0;vertical-align:top">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                                    <tbody></tbody>
+                                    <tbody><tr><td>&nbsp;</td></tr></tbody>
                                   </table>
                                 </td>
                               </tr>
