--- a/KED/default.html
+++ b/KED/default.html
@@ -388,7 +388,11 @@
                               </tr>
                             </tbody>
                           </table>
-                        </div> <!--[if mso | IE]></td><td style="vertical-align:bottom;width:217px;" ><![endif]-->
+                        </div> 
+                        <!--[if mso | IE]>
+                          </td>
+                          <td style="vertical-align:bottom;width:217px;" >
+                        <![endif]-->
                         <div class="mj-column-per-33-333333333333336 mj-outlook-group-fix"
                           style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:33%">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
@@ -418,7 +422,11 @@
                               </tr>
                             </tbody>
                           </table>
-                        </div> <!--[if mso | IE]></td><td style="vertical-align:bottom;width:217px;" ><![endif]-->
+                        </div> 
+                        <!--[if mso | IE]>
+                          </td>
+                          <td style="vertical-align:bottom;width:217px;" >
+                        <![endif]-->
                         <div class="mj-column-per-33-333333333333336 mj-outlook-group-fix"
                           style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:33%">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
@@ -437,6 +445,123 @@
                                                     src="./images/I4003_2126_6002_3877_52_69.png"
                                                     style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                                     width="217" height="auto"> </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                      </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+      style="background:#234793;background-color:#234793;width:100%">
+      <tbody>
+        <tr>
+          <td>
+            <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+            <div style="margin:0 auto;max-width:700px">
+              <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
+                <tbody>
+                  <tr>
+                    <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
+                      <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:652px;" ><![endif]-->
+                      <div class="mj-column-per-100 mj-outlook-group-fix"
+                        style="direction:ltr;display:inline-block;font-size:0;line-height:0;text-align:left;width:100%">
+                        <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:bottom;width:217px;" ><![endif]-->
+                        <div class="mj-column-per-33-333333333333336 mj-outlook-group-fix"
+                          style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:33%">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                            <tbody>
+                              <tr>
+                                <td style="padding:24px 0;vertical-align:bottom">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                    <tbody>
+                                      <tr>
+                                        <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                            style="border-collapse:collapse;border-spacing:0">
+                                            <tbody>
+                                              <tr>
+                                                <td style="width:217px">&nbsp;</td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div> 
+                        <!--[if mso | IE]>
+                          </td>
+                          <td style="vertical-align:top;width:217px;" >
+                        <![endif]-->
+                        <div class="mj-column-per-33-333333333333336 mj-outlook-group-fix"
+                          style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:33%">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                            <tbody>
+                              <tr>
+                                <td style="padding:0;vertical-align:top">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                    <tbody>
+                                      <tr>
+                                        <td align="center" style="font-size:0;padding:0;word-break:break-word">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                            style="border-collapse:collapse;border-spacing:0">
+                                            <tbody>
+                                              <tr>
+                                                <td style="width:100px"> <img alt
+                                                    src="./images/I4003_2126_6004_4419_52_69.png"
+                                                    style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100px;"
+                                                    width="100" height="auto"> </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div> 
+                        <!--[if mso | IE]>
+                          </td>
+                          <td style="vertical-align:bottom;width:217px;" >
+                        <![endif]-->
+                        <div class="mj-column-per-33-333333333333336 mj-outlook-group-fix"
+                          style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:33%">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                            <tbody>
+                              <tr>
+                                <td style="padding:24px 0;vertical-align:bottom">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                    <tbody>
+                                      <tr>
+                                        <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                            style="border-collapse:collapse;border-spacing:0">
+                                            <tbody>
+                                              <tr>
+                                                <td style="width:217px">&nbsp;</td>
                                               </tr>
                                             </tbody>
                                           </table>
